erDiagram
    %% @surreal.schemafull
    %% @surreal.aggregate "QuestDependency (Models/Quest/QuestDependency.cs)"
    %% @surreal.guardrail "G6 SCHEMAFULL; cross-quest dependency edge. Quest activation refuses to enter Active until all Required dependencies are satisfied."
    %% @surreal.note "Optional vs Required is a hint to the dependency-check endpoint -- Required dependencies block activation; Optional ones are reported in DependencyCheckResult for caller visibility but do not block."
    %% @surreal.note "depends_on_node_id is set when the dependency is on a specific node's output (e.g. 'must have HolonCreate's holonId') rather than the entire quest's completion. Null = depend on the whole quest reaching Succeeded."
    %% @surreal.slice "quest"
    quest_dependency {
        %% @surreal.fieldgroup "Core identity (record id is the Guid('N') of QuestDependency.Id)"
        %% @surreal.assert "$value != NONE AND $value != \"\""
        string id
        %% @surreal.fieldgroup "Dependent quest (the one that won't run until the dependency is satisfied)"
        %% @surreal.assert "$value != NONE AND $value != \"\""
        string quest_id
        %% @surreal.fieldgroup "Dependency target quest"
        %% @surreal.assert "$value != NONE AND $value != \"\""
        string depends_on_quest_id
        %% @surreal.fieldgroup "Optional: depend on a specific node output rather than full quest completion"
        option<string> depends_on_node_id
        %% @surreal.fieldgroup "QuestDependencyType enum name"
        %% @surreal.assert "$value INSIDE [\"Required\", \"Optional\"]"
        %% @surreal.default "\"Required\""
        string dependency_type
        %% @surreal.index fields=[quest_id] name=quest_dependency_by_quest
        %% @surreal.index fields=[depends_on_quest_id] name=quest_dependency_by_target
    }

    quest            ||--o{ quest_dependency : "declares deps"
    quest_dependency }o--|| quest            : "depends on quest"
    quest_dependency }o--o| quest_node       : "or specific node output"
